tests/NormalTests/paczka1/small_fuzzy/52668924.err
Error in line 5: inhguEfTP80 A935 3,93
Error in line 7: KgtKB5 S655 48,0
Error in line 15: A346 S655 54,03
